# arxiv_mcp

./: .gitignore  README.md  pyproject.toml
arxiv-mcp/: README.md
arxiv-mcp/src/arxiv_mcp/: __init__.py  arxiv_client.py  cli.py
src/arxiv_mcp/: arxiv_client.py  cli.py  server.py
