[project]
name = "arxiv-mcp"
version = "0.1.0"
description = "arXiv MCP server — search and download papers"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
    "tomli-w>=1.0",
]

[project.scripts]
arxiv-mcp = "arxiv_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_mcp"]
